--- a/index.html
+++ b/index.html
@@ -2,120 +2,50 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Movie API Documentation</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
-      color: #333;
-      padding: 20px;
-    }
-    h1 {
-      text-align: center;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-    }
-    th, td {
-      padding: 10px;
-      border: 1px solid #ccc;
-    }
-    th {
-      background-color: #efefef;
-    }
-    pre {
-      background-color: #f4f4f4;
-      padding: 10px;
-      border-radius: 4px;
-      font-family: monospace;
-      overflow-x: auto;
-    }
-  </style>
+  <title>Movie API – Home</title>
 </head>
-<body>
-  <h1>Movie API Documentation</h1>
-  <table>
-    <thead>
-      <tr>
-        <th>Method</th>
-        <th>Endpoint</th>
-        <th>Description</th>
-        <th>Request Body</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>GET</td>
-        <td>/movies</td>
-        <td>Return a list of ALL movies</td>
-        <td>None</td>
-      </tr>
-      <tr>
-        <td>GET</td>
-        <td>/movies/:title</td>
-        <td>Return data about a single movie by title</td>
-        <td>None</td>
-      </tr>
-      <tr>
-        <td>GET</td>
-        <td>/genres/:name</td>
-        <td>Return genre details (description) by name</td>
-        <td>None</td>
-      </tr>
-      <tr>
-        <td>GET</td>
-        <td>/directors/:name</td>
-        <td>Return director details (bio, birth year, death year) by name</td>
-        <td>None</td>
-      </tr>
-      <tr>
-        <td>POST</td>
-        <td>/users</td>
-        <td>Register a new user</td>
-        <td>
-          <pre>{
-  "Username": "user1",
-  "Password": "securepass",
-  "Email": "user1@example.com",
-  "Birthday": "1990-01-01"
-}</pre>
-        </td>
-      </tr>
-      <tr>
-        <td>PUT</td>
-        <td>/users/:username</td>
-        <td>Update an existing user's info</td>
-        <td>
-          <pre>{
-  "Username": "newName",
-  "Password": "newPass",
-  "Email": "newEmail@example.com",
-  "Birthday": "1985-05-05"
-}</pre>
-        </td>
-      </tr>
-      <tr>
-        <td>POST</td>
-        <td>/users/:username/movies/:movieId</td>
-        <td>Add a movie to a user's favorites</td>
-        <td>None</td>
-      </tr>
-      <tr>
-        <td>DELETE</td>
-        <td>/users/:username/movies/:movieId</td>
-        <td>Remove a movie from a user's favorites</td>
-        <td>None</td>
-      </tr>
-      <tr>
-        <td>DELETE</td>
-        <td>/users/:username</td>
-        <td>Deregister (delete) a user</td>
-        <td>None</td>
-      </tr>
-    </tbody>
-  </table>
+<body text="#111111" bgcolor="#ffffff" link="#0a58ca" vlink="#6a3dc0" alink="#ff5500">
+  <h1>🎬 Movie API</h1>
+  <p>Welcome! This is the landing page for your Movie API built with Express + Mongoose.</p>
+
+  <h2>Base URL</h2>
+  <p><b>http://localhost:3000</b></p>
+
+  <h2>Quick Links</h2>
+  <ul>
+    <li><a href="public/documentation.html">Open API Documentation</a></li>
+    <li><a href="/movies">GET /movies</a> (list all movies)</li>
+  </ul>
+
+  <h2>Key Endpoints (overview)</h2>
+  <ul>
+    <li><code>GET /movies</code> – List all movies</li>
+    <li><code>GET /movies/:title</code> – Get a single movie (case-insensitive title)</li>
+    <li><code>GET /genres/:name</code> – Get genre details by name</li>
+    <li><code>GET /directors/:name</code> – Get director details by name</li>
+    <li><code>POST /users</code> – Register a new user</li>
+    <li><code>PUT /users/:username</code> – Update user info</li>
+    <li><code>POST /users/:username/movies/:movieId</code> – Add favorite</li>
+    <li><code>DELETE /users/:username/movies/:movieId</code> – Remove favorite</li>
+    <li><code>DELETE /users/:username</code> – Deregister user</li>
+  </ul>
+
+  <h2>Quick Examples (curl)</h2>
+  <pre><font color="#111111"># List all movies
+curl http://localhost:3000/movies
+
+# Get one movie by title
+curl http://localhost:3000/movies/Inception
+
+# Register a new user
+curl -X POST http://localhost:3000/users \
+  -H "Content-Type: application/json" \
+  -d '{"Username":"alice","Password":"password123","Email":"alice@example.com","Birthday":"1995-01-01"}'</font></pre>
+
+  <h2>Notes</h2>
+  <ul>
+    <li>Be sure MongoDB is running and at least one movie is inserted (e.g., “Inception”).</li>
+    <li>Test endpoints with Postman or curl; this page is informational only.</li>
+  </ul>
 </body>
 </html>
